Change to Java21